k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nepalstay
  labels:
    app.kubernetes.io/name: nepalstay
    app.kubernetes.io/part-of: nepalstay
    environment: production
