k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nepalstay
  namespace: nepalstay
  labels:
    app: nepalstay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nepalstay
  template:
    metadata:
      labels:
        app: nepalstay
    spec:
      serviceAccountName: nepalstay
      containers:
        - name: nepalstay
          image: nepalstay-ecr/nepalstay:imagetag
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "100m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
