k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nepalstay
  namespace: nepalstay
  labels:
    app: nepalstay

spec:
  selector:
    app: nepalstay  # this selector matches the pod labels: app: nepalstay
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
