k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nepalstay
  namespace: nepalstay
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: nepalstay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nepalstay
                port:
                  number: 80
