k8s/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nepalstay
  namespace: nepalstay
spec:
  podSelector:
    matchLabels:
      app: nepalstay
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
